<resources>
    <string name="app_name">MVVMDemo</string>
    <string name="compose_shortcut_short_label">label</string>
    <string name="compose_disabled_message">message</string>
    <string name="download">download</string>

    <string name="linear_layout_manager" translatable="false">android.support.v7.widget.LinearLayoutManager</string>
    <string name="grid_layout_manager" translatable="false">android.support.v7.widget.GridLayoutManager</string>

    <string name="status_layout_manager_loading">Loading&#8230;</string>
    <string name="status_layout_manager_empty">Empty</string>
    <string name="status_layout_manager_error">Error</string>
    <string name="status_layout_manager_retry">Reload</string>


    <string name="toast_message">Toast message</string>

    <string name="normal_toast_with_icon" translatable="false">NORMAL TOAST (WITH ICON)</string>
    <string name="normal_toast_without_icon" translatable="false">NORMAL TOAST (WITHOUT ICON)</string>
    <string name="warning_toast" translatable="false">WARNING TOAST</string>
    <string name="info_toast" translatable="false">INFO TOAST</string>
    <string name="info_toast_with_formatting" translatable="false">INFO TOAST WITH FORMATTING</string>
    <string name="error_toast" translatable="false">ERROR TOAST</string>
    <string name="success_toast" translatable="false">SUCCESS TOAST</string>
    <string name="custom_configuration" translatable="false">CUSTOM CONFIGURATION</string>


    <string name="error_message">This is an error toast.</string>
    <string name="success_message">Success!</string>
    <string name="info_message">Here is some info for you.</string>
    <string name="warning_message">Beware of the dog.</string>
    <string name="normal_message_without_icon">Normal toast w/o icon</string>
    <string name="normal_message_with_icon">Normal toast w/ icon</string>
    <string name="custom_message" translatable="false">sudo kill -9 everyone</string>
</resources>
